[package]
name = "forc"
version.workspace = true
description = "Fuel Orchestrator."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "forc"
path = "src/lib.rs"

[[bin]]
name = "forc"
path = "src/main.rs"

[features]
default = []
test = []
util = []
profile = []

[dependencies]
annotate-snippets.workspace = true
ansiterm.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
forc-pkg.workspace = true
forc-test.workspace = true
forc-tracing.workspace = true
forc-util = { workspace = true, features = ["tx"] }
fs_extra.workspace = true
fuel-abi-types.workspace = true
fuel-asm.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sway-core.workspace = true
sway-error.workspace = true
sway-features.workspace = true
sway-ir.workspace = true
sway-types.workspace = true
sway-utils.workspace = true
term-table.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true, features = ["parse"] }
toml_edit.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true
whoami.workspace = true

[dev-dependencies]
completest-pty.workspace = true
rexpect.workspace = true
