[package]
name = "formatter"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/sway"
description = "Sway formatter."

[dependencies]
core-lang = { path = "../core-lang" }
ropey = "1.2"
