[package]
authors = ["digorithm <rodrigo.araujo@fuel.sh>"]
name = "fuels-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
blake2 = "0.9"
bytes = { version = "1.0.1", features = ["serde"] }
glob = { version = "0.3.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
regex = "1.5.4"
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = true }
sha2 = "0.9.5"
strum = "0.21"
strum_macros = "0.21"
thiserror = { version = "1.0.26", default-features = false }
itertools = "0.10.1"
