[package]
name = "fume-server"
version = "0.1.0"
authors = ["leviathan88 <elvisdedic@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
pest = "2.0"
parser      = { path = "../parser" }
serde_json = "1.0.60"
tokio = { version = "1.3", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
lspower = "1.0.0"

[profile.dev]
debug = 2