[package]
name = "sway-ast"
version = "0.61.0"
description = "Sway's AST"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
extension-trait = "1.0.2"
num-bigint = { version = "0.4.5", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
sway-error = { version = "0.61.0", path = "../sway-error" }
sway-types = { version = "0.61.0", path = "../sway-types" }

[lints.clippy]
iter_over_hash_type = "deny"
