[package]
name = "sway-core"
version = "0.61.0"
description = "Sway core language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
derivative = "2.2.0"
dirs = "5.0"
either = "1.12.0"
ethabi = { package = "fuel-ethabi", version = "18.0.0" }
etk-asm = { package = "fuel-etk-asm", version = "0.3.1-dev", features = [
    "backtraces",
] }
etk-ops = { package = "fuel-etk-ops", version = "0.3.1-dev" }
fuel-abi-types = { workspace = true }
fuel-vm = { workspace = true, features = ["serde"] }
gimli = "0.30.0"
graph-cycles = "0.1.0"
hashbrown = "0.14.5"
hex = { version = "0.4", optional = true }
im = "15.1"
indexmap = "2.2.6"
itertools = "0.13"
lazy_static = "1.5"
miden-core = "0.9.1"
object = { version = "0.36.0", features = ["write"] }
parking_lot = "0.12"
pest = "2.7.10"
pest_derive = "2.7"
petgraph = "0.6"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10"
strum = { version = "0.26.3", features = ["derive"] }
sway-ast = { version = "0.61.0", path = "../sway-ast" }
sway-error = { version = "0.61.0", path = "../sway-error" }
sway-ir = { version = "0.61.0", path = "../sway-ir" }
sway-parse = { version = "0.61.0", path = "../sway-parse" }
sway-types = { version = "0.61.0", path = "../sway-types" }
sway-utils = { version = "0.61.0", path = "../sway-utils" }
thiserror = "1.0"
tracing = "0.1"
uint = "0.9"
vec1 = "1.12.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo = "0.30.12"

[lints.clippy]
iter_over_hash_type = "deny"
