[package]
name = "sway-core"
version.workspace = true
description = "Sway core language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
either.workspace = true
ethabi.workspace = true
etk-asm = { workspace = true, features = ["backtraces"] }
etk-ops.workspace = true
fuel-abi-types.workspace = true
fuel-vm = { workspace = true, features = ["serde"] }
gimli.workspace = true
graph-cycles.workspace = true
hashbrown.workspace = true
hex = { workspace = true, optional = true }
im.workspace = true
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
lazy_static.workspace = true
object = { workspace = true, features = ["write"] }
parking_lot.workspace = true
paste.workspace = true
pest.workspace = true
pest_derive.workspace = true
petgraph.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
sway-ast.workspace = true
sway-error.workspace = true
sway-features.workspace = true
sway-ir.workspace = true
sway-parse.workspace = true
sway-types.workspace = true
sway-utils.workspace = true
swayfmt.workspace = true
thiserror.workspace = true
toml = { workspace = true, features = ["parse"] }
tracing.workspace = true
uint.workspace = true
vec1.workspace = true
prettydiff.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
