[package]
name = "sway-error"
version = "0.48.0"
description = "Sway's error handling"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
either = "1.9.0"
num-traits = "0.2.14"
smallvec = "1.7"
sway-types = { version = "0.48.0", path = "../sway-types" }
thiserror = "1.0"
uwuify = { version = "^0.2", optional = true }

[features]
default = []
uwu = ["uwuify"]
