[package]
name = "sway-error"
version.workspace = true
description = "Sway's error handling"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
either.workspace = true
in_definite.workspace = true
num-traits.workspace = true
smallvec.workspace = true
strsim.workspace = true
sway-types.workspace = true
thiserror.workspace = true
uwuify = { workspace = true, optional = true }

[features]
default = []
uwu = ["uwuify"]

[lints.clippy]
iter_over_hash_type = "deny"
