[package]
name = "sway-features"
description = "Sway's experimental features"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
sway-error = { path = "../sway-error" }
sway-types = { path = "../sway-types" }
paste.workspace = true
