[package]
name = "sway-features"
description = "Sway's experimental features"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
pastey.workspace = true
sway-error.workspace = true
sway-types.workspace = true
