[package]
name = "sway-fmt"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/sway"
description = "Sway sway-fmt."

[dependencies]
sway-core = { path = "../sway-core", version = "0.1" }
ropey = "1.2"
