[package]
name = "sway-fmt"
version = "0.1.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/sway"
description = "Sway sway-fmt."

[dependencies]
ropey = "1.2"
sway-core = { version = "0.1.2", path = "../sway-core" }
