[package]
name = "sway-ir"
version.workspace = true
description = "Sway intermediate representation."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
downcast-rs.workspace = true
filecheck.workspace = true
indexmap = { workspace = true, features = ["rayon"] }
itertools.workspace = true
once_cell.workspace = true
peg.workspace = true
prettydiff.workspace = true
rustc-hash.workspace = true
serde = { version = "1.0", features = ["derive"] }
slotmap.workspace = true
sway-features.workspace = true
sway-ir-macros.workspace = true
sway-types.workspace = true
sway-utils.workspace = true

[lints]
workspace = true
