[package]
name = "sway-lsp"
version = "0.48.0"
description = "LSP server for Sway."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.41"
dashmap = "5.4"
fd-lock = "4.0"
forc-pkg = { version = "0.48.0", path = "../forc-pkg" }
forc-tracing = { version = "0.48.0", path = "../forc-tracing" }
forc-util = { version = "0.48.0", path = "../forc-util" }
lsp-types = { version = "0.94", features = ["proposed"] }
notify = "5.0.0"
notify-debouncer-mini = { version = "0.2.0" }
parking_lot = "0.12.1"
proc-macro2 = "1.0.5"
quote = "1.0.9"
rayon = "1.5.0"
ropey = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
sway-ast = { version = "0.48.0", path = "../sway-ast" }
sway-core = { version = "0.48.0", path = "../sway-core" }
sway-error = { version = "0.48.0", path = "../sway-error" }
sway-parse = { version = "0.48.0", path = "../sway-parse" }
sway-types = { version = "0.48.0", path = "../sway-types" }
sway-utils = { version = "0.48.0", path = "../sway-utils" }
swayfmt = { version = "0.48.0", path = "../swayfmt" }
syn = { version = "1.0.73", features = ["full"] }
tempfile = "3"
thiserror = "1.0.30"
tokio = { version = "1.3", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml_edit = "0.19"
tower-lsp = { version = "0.19", features = ["proposed"] }
tracing = "0.1"
urlencoding = "2.1.2"

[dev-dependencies]
assert-json-diff = "2.0"
criterion = "0.5"
dirs = "4.0"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
pretty_assertions = "1.4.0"
regex = "^1.10.2"
sway-lsp-test-utils = { path = "tests/utils" }
tower = { version = "0.4.12", default-features = false, features = ["util"] }

[[bench]]
name = "bench_main"
harness = false
