[package]
name = "sway-lsp"
version = "0.61.0"
description = "LSP server for Sway."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5"
dashmap = "6.0"
fd-lock = "4.0"
forc-pkg = { version = "0.61.0", path = "../forc-pkg" }
forc-tracing = { version = "0.61.0", path = "../forc-tracing" }
forc-util = { version = "0.61.0", path = "../forc-util" }
indexmap = { version = "2.2.6", features = ["rayon"] }
lsp-types = { version = "0.94", features = ["proposed"] }
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1" }
parking_lot = "0.12.3"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rayon = "1.10.0"
rayon-cond = "0.3"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
sway-ast = { version = "0.61.0", path = "../sway-ast" }
sway-core = { version = "0.61.0", path = "../sway-core" }
sway-error = { version = "0.61.0", path = "../sway-error" }
sway-parse = { version = "0.61.0", path = "../sway-parse" }
sway-types = { version = "0.61.0", path = "../sway-types" }
sway-utils = { version = "0.61.0", path = "../sway-utils" }
swayfmt = { version = "0.61.0", path = "../swayfmt" }
syn = { version = "2.0.68", features = ["full"] }
tempfile = "3"
thiserror = "1.0.61"
tokio = { version = "1.38", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml_edit = "0.22"
tower-lsp = { version = "0.20", features = ["proposed"] }
tracing = "0.1"
urlencoding = "2.1.3"

[dev-dependencies]
assert-json-diff = "2.0"
criterion = "0.5"
dirs = "5.0"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
pretty_assertions = "1.4.0"
rand = "0.8"
regex = "^1.10.5"
sway-lsp-test-utils = { path = "tests/utils" }
tikv-jemallocator = "0.5"
tower = { version = "0.4.13", default-features = false, features = ["util"] }

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false

[lints.clippy]
iter_over_hash_type = "deny"
