[package]
name = "sway-macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
sway-types.workspace = true
syn.workspace = true

[lints]
workspace = true
